--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Password Generator!</title>
         <link rel="stylesheet" href="index.css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
@@ -31,8 +32,12 @@
             
 
             <div id="passwords-container">
-                <div class="password", id="password1"></div>
-                <div class="password", id="password2"></div>
+                <div class="password", id="password1">
+                    <p>Password 1...</p><span class="tooltip">Copy to clipboard</span>
+                </div>
+                <div class="password", id="password2">
+                    <p>Password 2...</p><span class="tooltip">Copy to clipboard</span>
+                </div>
             </div>
 
         </div>
